kernel/fs: Print the vnode or mount in question in FS_CALL panics.

May help to diagnose #17870.